--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
 		<sitemesh.version>2.4.2</sitemesh.version>
 		<driver.mysql.version>8.0.13</driver.mysql.version>
 		<weld.servlet.version>2.4.8.Final</weld.servlet.version>
+		<beanutils.version>1.9.4</beanutils.version>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
@@ -78,6 +79,12 @@
 		</dependency>
 		<!--end json -->
 		
+		<dependency>
+			<groupId>commons-beanutils</groupId>
+			<artifactId>commons-beanutils</artifactId>
+			<version>${beanutils.version}</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
