--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,7 +6,8 @@
 	<display-name>MavenProject</display-name>
 
 	<listener>
-		<listener-class>org.jboss.weld.environment.servlet.Listener</listener-class>
+		<listener-class>org.jboss.weld.environment.servlet.Listener
+		</listener-class>
 	</listener>
 
 	<filter>
@@ -19,6 +20,15 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 
+	<filter>
+		<filter-name>servletFilter</filter-name>
+		<filter-class>com.ptit.filter.AuthorizationFilter
+		</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>servletFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 	<session-config>
 		<tracking-mode>COOKIE</tracking-mode>
 	</session-config>
